<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Dot Encounter Calculator2</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_the__dot__calculator">The_Dot_Calculator</string>
    <string name="title_activity_the_dot_calculator">The Dot Calculator</string>
    <string name="button_randDot">Dot Trait 1</string>
    <string name="button_randEnc">Enc Trait 1</string>
    <string name="button_alphaChange">Dot Trait 3</string>
    <string name="button_alphaEnc">Enc Trait 3</string>
    <string name="button_runEnc">Run Encounter</string>

</resources>